[package]
name = "convoy"
version = "0.0.5"
edition = "2024"

[dependencies]
default-net = "0.22.0"
libc = "0.2.178"
pnet = "0.35.0"
pnet_macros_support = "0.35.0"
rand = "0.9.2"
xsk-rs = { git = "https://github.com/rstade/xsk-rs/", branch = "rstade" }
libxdp-sys = "=0.2.2"
tokio = { version = "1", features = ["full"] }
ipnet = "2.12.0"
itertools = "0.15.0"
clap = { version = "4.6.1", features = ["derive"] }
aya = "0.14.0"
anyhow = "1.0.103"
